  - Removed function references from address book database backend class,
    list_addr(), lookup() and search() functions. Referenced lookup()
    function caused E_NOTICE warnings in PHP 4.4.0. Reported by Cor
    Bosman.
  - Fixed address book file and database backend error messages broken by
    CVE-2005-1769 patches.
  - Fixed compose form redirection in spamcop plugin.
  - "Toggle all" pointless when folder list empty (#1267079).
  - Readded options_identity_process and options_identity_renumber hooks
    broken by CVE-2005-2095 fixes.
  - Removed duplicate generic_header hook call in src/right_main.php (#1269189).
  - Focus on compose screen no longer shifts automatically if user has manually
    focused somewhere herself.
  - Fixed placement of abook_init hook.
  - Fixed IMAP search command in filters plugin. Command was breaking
    sqimap_mailbox_exists() check. Reported by Daniel Watts.
  - Solved function conflict between compatibility and info plugins.
  - Added PHP register_globals check to configuration test utility.
  - Added character set conversion to html message parts and html
    attachments with character set information (#1258925). Original patch
    by Peter Draganov (#1195232).
  - Fixed decoding of quoted-printable text in decodeBody function.
    Reported by João Carlos Mendes Luís.
  - Added CR trimming to SquirrelSpell plugin in order to fix problems on
    Windows systems.
  - Backported truncateWithEntities function.
  - Backported user definable truncation widths on subject and sender
    fields.
  - Load default value for INTERNALDATE sorting to be ON to match initial
    preference page if user has not set anything.
  - E_NOTICE and unlink error message if user hits delete multiple times
    before compose page has reloaded.
  - Undefined variable in view_header.
  - Undefined index offset in read_body when trying to calculate next/prev
    links for attached messages.

Version 1.4.5 - 13 July 2005
----------------------------